# BiliTools

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  README_JA.md  TODO.md  UPDATE_LOG.md  eslint.config.ts  index.html  install.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tailwind.config.ts  test.txt  tsconfig.json  tsconfig.node.json  updatelog.mjs  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  DOCS_REPORT.md  FEATURE_REQUEST.yml  config.yml
.github/workflows/: close-issues.yml  deploy-docs.yml  pr-checks.yml  release.yml  test-app.yml  test-backend.yml  test-docs.yml  test-frontend.yml
docs/: .gitignore  config.ts  index.md  package.json  vercel.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css  index.ts
docs/app/: config.ts  index.md
docs/app/.vitepress/: config.ts
docs/app/en-US/: index.md
docs/app/guide/: download.md  login.md  risk.md  search.md  settings.md  stream.md
docs/app/help/: macos.md  windows.md
docs/app/quick/: about.md  install.md
docs/en-US/: config.ts
docs/guide/: about.md  av-bv.md  download.md  install.md  login.md  parsing.md  resource.md  risk.md  settings.md  stream.md
docs/help/: index.md  windows.md
docs/quick/: install.md
patches/: @tauri-apps+plugin-http+2.0.0-beta.2.patch  @tauri-apps+plugin-http+2.0.0-rc.2.patch  @tauri-apps+plugin-http+2.0.0.patch  @tauri-apps+plugin-http+2.3.0.patch  @tauri-apps+plugin-http+2.4.3.patch
scripts/: binaries.mjs  close-issues.mjs  release.mjs  updatelog.mjs  updater.mjs
src/: App.vue  index.html  index.org.html  main.ts  md5.d.ts  shims-vue.d.ts  style.css  vite-env.d.ts  vuex-shim.d.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json  tauri.linux.amd64.conf.json  tauri.linux.arm64.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/binaries/: DanmakuFactory-aarch64-apple-darwin  DanmakuFactory-universal-apple-darwin  DanmakuFactory-x86_64-apple-darwin  DanmakuFactory-x86_64-unknown-linux-gnu  aria2c-aarch64-apple-darwin  aria2c-universal-apple-darwin  aria2c-x86_64-apple-darwin  aria2c-x86_64-unknown-linux-gnu  ffmpeg-aarch64-apple-darwin  ffmpeg-aarch64-unknown-linux-gnu  ffmpeg-x86_64-apple-darwin  ffmpeg-x86_64-unknown-linux-gnu
src-tauri/binaries/linux/: bilitools-DanmakuFactory-aarch64-unknown-linux-gnu  bilitools-aria2c-aarch64-unknown-linux-gnu  bilitools-aria2c-x86_64-unknown-linux-gnu
src-tauri/binaries/macos/: DanmakuFactory-aarch64-apple-darwin  aria2c-aarch64-apple-darwin  aria2c-x86_64-apple-darwin  ffmpeg-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  errors.rs  http.rs  lib.rs  logger.rs  main.rs  shared.rs  storage.rs
src-tauri/src/services/: aria2c.rs  browser.rs  cookies.rs  dh.rs  ffmpeg.rs  login.rs  mod.rs  queue.rs
src-tauri/src/services/queue/: atomics.rs  frontend.rs  handlers.rs  manager.rs  mod.rs  runtime.rs  scheduler.rs  task.rs  types.rs
src-tauri/src/services/storage/: config.rs  cookies.rs  mod.rs
src-tauri/src/storage/: archive.rs  config.rs  cookies.rs  db.rs  downloads.rs  migrate.rs  mod.rs  queue.rs  schedulers.rs  tasks.rs
src/assets/css/: fonts.css  style.css
src/components/: ClipboardDialog.vue  ComponentsWrapper.vue  ContextMenu.vue  DownPage.vue  Dropdown.vue  Empty.vue  HomePage.vue  Image.vue  LinkDropper.vue  LoginPage.vue  PopUp.vue  ProgressBar.vue  SettingPage.vue  SideBar.vue  Switch.vue  TitleBar.vue  Updater.vue  index.ts
src/components/DownPage/: Popup.vue  Queue.vue  Scheduler.vue  SchedulerTask.vue  Task.vue  index.ts
src/components/HistoryPage/: Filter.vue  index.ts
src/components/HomePage/: MediaInfo.vue  MediaListItem.vue  Popup.vue  index.ts
src/components/SearchPage/: MediaInfo.vue  MediaInfoItem.vue  MediaList.vue  PackagePopup.vue  Popup.vue  index.ts
src/components/SettingPage/: Cache.vue  Drag.vue  Dropdown.vue  Filename.vue  Format.vue  Path.vue  index.ts
src/components/SettingsPage/: Advanced.vue  Download.vue  Format.vue  General.vue  Storage.vue  Strategy.vue  index.ts
src/css/: bcc-iconfont.css  context-menu.css  fonts.css  style.css  window-modules.css
src/css/font-awesome/: all.css
src/font/HarmonyOS_Sans_SC_Regular/: font.min.css
src/fonts/font-awesome/: all.css
src/i18n/: index.ts
src/i18n/locales/: en-US.json  ja-JP.json  zh-CN.json  zh-HK.json
src/js/: protobuf.js  render.js  renderer.js
src/lib/: geetest.d.ts  geetest.js  gt.0.4.9.min.js  manga.wasm  wasm_exec.d.ts  wasm_exec.js
src/locales/: index.json
src/locales/en-US/: common.json  downloads.json  error.json  favorites.json  home.json  settings.json  updater.json  user.json
src/locales/ja-JP/: common.json  downloads.json  error.json  favorites.json  home.json  settings.json  updater.json  user.json
src/locales/zh-CN/: common.json  downloads.json  error.json  favorites.json  home.json  settings.json  updater.json  user.json
src/locales/zh-HK/: common.json  downloads.json  error.json  favorites.json  home.json  settings.json  updater.json  user.json
src/proto/: dm_v1.d.ts  dm_v1.js  dm_v1.proto  dm_v1.ts
src/router/: index.ts
src/scripts/: data.ts  format.ts  http.ts  login.ts  pages.js  renderer.js  sdk.ts  updater.ts  utils.ts  verify.ts
src/services/: auth.ts  backend.ts  clipboard.ts  data.ts  error.ts  index.ts  login.ts  queue.ts  updater.ts  utils.ts
src/services/media/: data.ts  dm.ts  extras.ts  index.ts  (+1 more)
src/shims/: global.d.ts  vue-virtual-scroller.d.ts
src/store/: app.ts  components.ts  index.ts  info.ts  queue.ts  settings.ts  user.ts
src/types/: DataTypes.ts  LoginTypes.ts  Sdk.type.ts  UserInfo.type.ts  data.d.ts  index.ts  login.d.ts  queue.d.ts  shared.d.ts  user.d.ts
src/views/: DownPage.vue  FavPage.vue  HistoryPage.vue  HomePage.vue  InfoPage.vue  SearchPage.vue  SettingPage.vue  SettingsPage.vue  UserPage.vue  index.ts
(+9 files in other folders)
