[package]
name = "bilitools"
version = "1.3.2"
description = "BiliTools - A Bilibili toolbox"
authors = ["btjawa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

# [profile.release.package.wry]
# debug = true
# debug-assertions = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["macos-private-api"] }
tauri-plugin-single-instance = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-log = "2.2.0"
tauri-plugin-os = "2.2.0"
tauri-plugin-process = "2.2.0"
tauri-plugin-http = { version = "2.2.0", features = ["unsafe-headers", "rustls-tls", "stream", "gzip", "brotli", "blocking"] }
tauri-plugin-clipboard-manager = "2.2.0"
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.11.1"
log = "0.4"
lazy_static = "1.5.0"
anyhow = "1.0.95"
tokio = { version = "1.42", features = ["macros", "io-util", "sync", "time", "fs", "signal"] }
rand = "0.8.5"
specta = { version = "2.0.0-rc", features = ["serde_json"] }
tauri-specta = { version = "2.0.0-rc", features = ["derive", "typescript"] }
specta-typescript = "0.0.7"
walkdir = "2.5.0"
ring = "0.17.8"
sys-locale = "0.3.2"
tauri-plugin-notification = "2.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_System_Com"] }
windows-core = "0.58.0"
webview2-com = "0.34.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.3.0"
