[package]
name = "bilitools"
version = "1.3.3"
description = "A cross-platform bilibili toolbox"
authors = ["btjawa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
# panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[profile.release.package.wry]
# debug = true
# debug-assertions = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bilitools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
anyhow = "1.0.97"
backtrace = "0.3.74"
base64 = "0.22.1"
chrono = "0.4.40"
dark-light = "2.0.0"
lazy_static = "1.5.0"
log = "0.4"
notifica = "3.0.2"
process_alive = "0.1.1"
rand = "0.9"
regex = "1.11.1"
ring = "0.17.14"
sea-orm = { version = "1", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "2.0.0-rc", features = ["serde_json"] }
specta-typescript = "0.0.7"
sys-locale = "0.3.2"
tauri = { version = "2.4.1", features = ["macos-private-api"] }
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-http = { version = "2.4.3", features = ["unsafe-headers", "rustls-tls", "stream", "gzip", "brotli", "blocking"] }
tauri-plugin-log = "2.3.1"
tauri-plugin-opener = "2.2.6"
tauri-plugin-os = "2.2.1"
tauri-plugin-process = "2.2.1"
tauri-plugin-single-instance = "2.2.3"
tauri-plugin-shell = "2.2.1"
tauri-specta = { version = "2.0.0-rc", features = ["derive", "typescript"] }
tokio = { version = "1.44", features = ["macros", "io-util", "sync", "time", "fs", "signal"] }
walkdir = "2.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60.0", features = ["Win32_Foundation", "Win32_System_Com"] }
windows-core = "0.60.0"
webview2-com = "0.36.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.7.0"
