[package]
name = "bilitools"
version = "1.4.0-dev"
description = "A cross-platform bilibili toolbox"
authors = ["btjawa"]
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true
codegen-units = 256
opt-level = 0
strip = false
debug = true

[profile.release]
codegen-units = 1
opt-level = "s"
# strip = true # https://github.com/tauri-apps/tauri/issues/14186
lto = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bilitools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
anyhow = "1.0.98"
arc-swap = "1.7.1"
base64 = "0.22.1"
dark-light = "2.0.0"
hmac = "0.12.1"
log = "0.4"
notify-rust = "4.11.7"
rand = "0.9"
regex = "1.11.1"
sea-query = "0.32.7"
sea-query-binder = { version = "0.7.0", features = ["sqlx-sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
specta = { version = "2.0.0-rc.22", features = ["serde_json"] }
specta-typescript = "0.0.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
sys-locale = "0.3.2"
tauri = { version = "2.7.0", features = ["macos-private-api"] }
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-dialog = "2.3.2"
tauri-plugin-http = { version = "2.5.1", features = ["unsafe-headers", "rustls-tls", "stream", "gzip", "brotli", "blocking"] }
tauri-plugin-log = { version = "2.6.0", features = ["colored"] }
tauri-plugin-opener = "2.4.0"
tauri-plugin-os = "2.3.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-shell = "2.3.0"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
time = "0.3.41"
tokio = { version = "1.47", features = ["macros", "io-util", "sync", "time", "fs", "signal"] }
walkdir = "2.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_System_Com"] }
windows-core = "0.61.2"
webview2-com = "0.37.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.9.0"
